* fixed studio page alignment  * fixed studio artist thumbs alignment

--- a/public/stylesheets/sass/mau.scss
+++ b/public/stylesheets/sass/mau.scss
@@ -1046,7 +1046,11 @@ margin: 0 0 20px 0;
   margin-top: 4px;
 }
 
-.content-block, #studio_page
+#studio_page {
+  width: 572px;
+  margin: auto;
+}
+.content-block
 {
   width: 560px;
   margin: auto;
@@ -1761,12 +1765,16 @@ span.rightarrow
 }
 
 .studio-thumb {
-  div {
-    color: $lightgray;
-  }
   border: 1px dotted #444;
   padding: 8px;
   vertical-align: top;
+  background-color:#111;
+  float:left;
+  width: 155px;
+  margin: 6px 8px 12px;
+  div {
+    color: $lightgray;
+  }
 }
 
 .studio-nfo {
@@ -1788,10 +1796,6 @@ span.rightarrow
   float: right;
 }
 .studio-thumb {
-  background-color:#111;
-  float:left;
-  width: 155px;
-  margin: 6px;
 }
 
 .artist-list h3, .studio-list h3 {
